Update dependencies and refactor code for improved clarity and functionality. Upgraded Spring Boot version to 3.5.4 and Java version to 21 in pom.xml. Refactored various configuration classes to remove unnecessary public access modifiers and improve readability. Updated TestController to change the home endpoint to /status. Enhanced HTML templates for better structure and consistency, including updates to dashboard and home pages. Improved Java code formatting and logging for better maintainability.